--- a/notebook.tex
+++ b/notebook.tex
@@ -21,7 +21,7 @@
     breaklines=true,
     xleftmargin=\parindent,
     showstringspaces=false,
-    basicstyle=\fontsize{5.5}{6}\ttfamily,
+    basicstyle=\fontsize{8}{9}\ttfamily,
 }
 \lstdefinestyle{cpp}{
 	style=shared,
@@ -53,18 +53,18 @@
 \lstset{escapechar=@}
 
 \pagestyle{fancy}
-\fancyhead[L]{Stanford University}
+\fancyhead[L]{Sharif University of Technology - Crockpot}
 \fancyhead[R]{\thepage}
 \fancyfoot[C]{}
 
 \fancypagestyle{plain}
 {
-\fancyhead[L]{Stanford University}
+\fancyhead[L]{Sharif University of Technology - Crockpot}
 \fancyhead[R]{\thepage}
 \fancyfoot[C]{}
 }
 
-\title{\vspace{-4ex}\Large{Stanford University ICPC Team Notebook (2015-16)}}
+\title{\vspace{-4ex}\Large{Sharif University of Technology - Crockpot - Notebook}}
 \author{}
 \date{}
 
