Ability to include tex and pdf

--- a/contents.tex
+++ b/contents.tex
@@ -17,6 +17,15 @@
 \subsection{Rotating Caliper}
 \raggedbottom\lstinputlisting[style=cpp]{code/rotating-caliper.cpp}
 \hrulefill
+\subsection{Duality and properties}
+\input{code/Duality.tex}
+\hrulefill
+\subsection{Delaunay(24$nlg^2n$)}
+\raggedbottom\lstinputlisting[style=cpp]{code/delaunay.cpp}
+\hrulefill
+\subsection{Stupid Delaunay($n^4$)}
+\raggedbottom\lstinputlisting[style=cpp]{code/stupid-delaunay.cpp}
+\hrulefill
 
 \section{Graph}
 \subsection{Maximum matching - Edmond's blossom}
@@ -56,6 +65,30 @@
 \hrulefill
 \subsection{NTT}
 \raggedbottom\lstinputlisting[style=cpp]{code/ntt.cpp}
+\hrulefill
+\subsection{Extended catalan}
+\input{code/ExtendedCatalan.tex}
+\hrulefill
+\subsection{Stirling 2}
+\input{code/Stirling2.tex}
+\hrulefill
+\subsection{Number of primes}
+\raggedbottom\lstinputlisting[style=txt]{code/NumberOfPrimes.txt}
+\hrulefill
+\subsection{Factorials}
+\raggedbottom\lstinputlisting[style=txt]{code/Factorials.txt}
+\hrulefill
+\subsection{Powers of 3}
+\raggedbottom\lstinputlisting[style=txt]{code/PowersOf3.txt}
+\hrulefill
+\subsection{C(2n,n)}
+\raggedbottom\lstinputlisting[style=txt]{code/C_2n,n_.txt}
+\hrulefill
+\subsection{Most divisor}
+\raggedbottom\lstinputlisting[style=txt]{code/MostDivisor.txt}
+\hrulefill
+\subsection{Combinatorics}
+\includepdf{code/Combinatorics.pdf}
 \hrulefill
 
 \section{String}
