--- a/notebook.tex
+++ b/notebook.tex
@@ -8,6 +8,7 @@
 \usepackage{pdflscape}
 \usepackage{multicol}
 \usepackage{amsmath}
+\usepackage{pdfpages}
 
 \renewcommand*{\ttdefault}{pcr}
 \renewcommand\cftsecfont{\fontsize{8}{9}\bfseries}
