Add header to pdfs

--- a/contents.tex
+++ b/contents.tex
@@ -88,7 +88,7 @@
 \raggedbottom\lstinputlisting[style=txt]{code/MostDivisor.txt}
 \hrulefill
 \subsection{Combinatorics}
-\includepdf{code/Combinatorics.pdf}
+\includepdf[pages=-,pagecommand={\pagestyle{fancy}}]{code/Combinatorics.pdf}
 \hrulefill
 
 \section{String}
