Updated pdf and improved generator

--- a/contents.tex
+++ b/contents.tex
@@ -2,6 +2,12 @@
 \subsection{Line intersection}
 \raggedbottom\lstinputlisting[style=cpp]{code/intersection.cpp}
 \hrulefill
+\subsection{Line and circle intersection}
+\raggedbottom\lstinputlisting[style=cpp]{code/LineCircleIntersection.cpp}
+\hrulefill
+\subsection{Intersection of 2 circle}
+\raggedbottom\lstinputlisting[style=cpp]{code/CirclesIntersection.cpp}
+\hrulefill
 \subsection{Convex hull 3D}
 \raggedbottom\lstinputlisting[style=cpp]{code/ConvexHull3D.cpp}
 \hrulefill
@@ -20,7 +26,7 @@
 \subsection{Duality and properties}
 \input{code/Duality.tex}
 \hrulefill
-\subsection{Delaunay(24$nlg^2n$)}
+\subsection{Delaunay($nlg^2n$)}
 \raggedbottom\lstinputlisting[style=cpp]{code/delaunay.cpp}
 \hrulefill
 \subsection{Stupid Delaunay($n^4$)}
@@ -66,11 +72,23 @@
 \subsection{NTT}
 \raggedbottom\lstinputlisting[style=cpp]{code/ntt.cpp}
 \hrulefill
-\subsection{Extended catalan}
-\input{code/ExtendedCatalan.tex}
+\subsection{Stirling 1}
+\raggedbottom\lstinputlisting[style=cpp]{code/stirling.cpp}
 \hrulefill
 \subsection{Stirling 2}
 \input{code/Stirling2.tex}
+\hrulefill
+\subsection{Chinese remainder}
+\raggedbottom\lstinputlisting[style=cpp]{code/chinese_remainder.cpp}
+\hrulefill
+\subsection{Popular LP}
+\input{code/PopularLP.tex}
+\hrulefill
+\subsection{Extended catalan}
+\input{code/ExtendedCatalan.tex}
+\hrulefill
+\subsection{Find polynomial from it's points}
+\input{code/Polynomial.tex}
 \hrulefill
 \subsection{Number of primes}
 \raggedbottom\lstinputlisting[style=txt]{code/NumberOfPrimes.txt}
@@ -86,9 +104,6 @@
 \hrulefill
 \subsection{Most divisor}
 \raggedbottom\lstinputlisting[style=txt]{code/MostDivisor.txt}
-\hrulefill
-\subsection{Combinatorics}
-\includepdf[pages=-,pagecommand={\pagestyle{fancy}}]{code/Combinatorics.pdf}
 \hrulefill
 
 \section{String}
@@ -106,4 +121,5 @@
 \subsection{Treap}
 \raggedbottom\lstinputlisting[style=cpp]{code/treap.cpp}
 \hrulefill
+\includepdf[pages=-,pagecommand={\pagestyle{fancy}}]{code/Combinatorics.pdf}
 
