Fix table of contents

--- a/contents.tex
+++ b/contents.tex
@@ -5,7 +5,7 @@
 \subsection{Line and circle intersection}
 \raggedbottom\lstinputlisting[style=cpp]{code/LineCircleIntersection.cpp}
 \hrulefill
-\subsection{Intersection of 2 circle}
+\subsection{Intersection of two circles}
 \raggedbottom\lstinputlisting[style=cpp]{code/CirclesIntersection.cpp}
 \hrulefill
 \subsection{Convex hull 3D}
@@ -26,10 +26,10 @@
 \subsection{Duality and properties}
 \input{code/Duality.tex}
 \hrulefill
-\subsection{Delaunay($nlg^2n$)}
+\subsection{Delaunay $O(n \log^2 n)$}
 \raggedbottom\lstinputlisting[style=cpp]{code/delaunay.cpp}
 \hrulefill
-\subsection{Stupid Delaunay($n^4$)}
+\subsection{Stupid Delaunay $O(n^4)$}
 \raggedbottom\lstinputlisting[style=cpp]{code/stupid-delaunay.cpp}
 \hrulefill
 
@@ -43,10 +43,10 @@
 \subsection{Gomory-hu}
 \raggedbottom\lstinputlisting[style=cpp]{code/gomory-hu.cpp}
 \hrulefill
-\subsection{Directed minimum spanning tree (mlogn)}
+\subsection{Directed minimum spanning tree $O(m \log n)$}
 \raggedbottom\lstinputlisting[style=cpp]{code/dmst_mlogn.cpp}
 \hrulefill
-\subsection{Directed minimum spanning tree (nm)}
+\subsection{Directed minimum spanning tree $O(nm)$}
 \raggedbottom\lstinputlisting[style=cpp]{code/dmst_nm.cpp}
 \hrulefill
 \subsection{Dominator tree}
@@ -83,6 +83,9 @@
 \hrulefill
 \subsection{Popular LP}
 \input{code/PopularLP.tex}
+\hrulefill
+\subsection{Duality of LP}
+\input{code/LPDuality.tex}
 \hrulefill
 \subsection{Extended catalan}
 \input{code/ExtendedCatalan.tex}
