--- a/notebook.tex
+++ b/notebook.tex
@@ -1,6 +1,6 @@
 \documentclass[10pt]{article}
 \usepackage[left=0.4in,right=0.4in,top=0.7in,bottom=0.4in]{geometry}
-\usepackage{hyperref}
+%\usepackage{hyperref}
 \usepackage{fancyhdr}
 \usepackage{listings}
 \usepackage{xcolor}
@@ -11,10 +11,10 @@
 \usepackage{pdfpages}
 
 \renewcommand*{\ttdefault}{pcr}
-\renewcommand\cftsecfont{\fontsize{8}{9}\bfseries}
-\renewcommand\cftsecpagefont{\fontsize{8}{9}\mdseries}
-\renewcommand\cftsubsecfont{\fontsize{5}{6}\mdseries}
-\renewcommand\cftsubsecpagefont{\fontsize{5}{6}\mdseries}
+\renewcommand\cftsecfont{\fontsize{9}{9}\bfseries}
+\renewcommand\cftsecpagefont{\fontsize{9}{9}\mdseries}
+\renewcommand\cftsubsecfont{\fontsize{8}{9}\mdseries}
+\renewcommand\cftsubsecpagefont{\fontsize{8}{7}\mdseries}
 \renewcommand\cftsecafterpnum{\vspace{-1ex}}
 \renewcommand\cftsubsecafterpnum{\vspace{-1ex}}
 
@@ -76,7 +76,10 @@
 
 \maketitle
 \vspace{-13ex}
+{
+\baselineskip=1.2\baselineskip
 \tableofcontents
+}
 \pagestyle{fancy}
 
 \input contents.tex
